Tried to fix ReceivePathModal's back button smaller

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ code {
 }
 
 .btn-sp-primary {
-  @apply text-sp-white font-bold text-2xl rounded-sp-button p-4 lg:p-8;
+  @apply text-sp-white font-bold text-2xl rounded-sp-button p-4;
 }
 
 .btn-sp-secondary {
